--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="main">
       <h1>Katies Dog Daycare and Boarding</h1>
-      <p>If this dispalay, then i am confused.</p>
+      <p>That was painful but i understand now</p>
 
     </section>
 
