--- a/index.html
+++ b/index.html
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="Katies Dog Daycare" content="Boarding, kenneling and walking dog care">
-    <meta name="Jordan Heasman" content="Information, prices and availability for dog care">
 
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="Katies Dog Daycare" content="Boarding, kenneling and walking dog care">
+  <meta name="Jordan Heasman" content="Information, prices and availability for dog care">
 
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/css/master.css" type="text/css">
-    <title>Katie's Dog daycare</title>
-  </head>
-  <body>
-    <section class="main">
-      <h1>Katies Dog Daycare and Boarding</h1>
-      <p>Reliable and flexible home from home service looking after your dogs
-        while you work or go on holiday. I offer short term or long term stays,
-        ad hoc visits or anything else you require.</p>
-      <img src="assets/photo1.jpg" alt="Dog sleeping upside down" height="450" width="540">
-    </section>
-    <section class="about">
-      <p>I have looked after clients dogs for the last 10 years and I absolutely
-        love what I do and like to help clients as much as I can by making sure
-        I am available and flexible to their requirements and ensuring their dogs
-        are happy and well looked after and exercised.</p>
-      <p>The dogs love coming to me and when many owners tell their dogs they are
-        going to "Katie's  the dogs sit and wait by the front door waiting for me!
-        Hence the name" Katies"!</p>
-      <p>I offer daycare so always have several dogs that travel and walk all
-        together as a pack, which the dogs love as lots of playmates and social
-        interaction and because they are well exercised together they all sleep
-        well too!</p>
-    </section>
-    <section class="hours">
-      <p>I am available 7 days a week 52 weeks of the year including Christmas
-        and Easter, etc!</p>
-      <p>I live in ripley and am happy to collect locally but also happy for
-        clients to drop their dogs off. <br>Daytime hours are from 6.15am to 9pm so
-        dogs can come and go anytime between then so that can accommodate most
-        peoples working hours!</p>
-    </section>
-    <section class="prices">
-      <p>Prices: daycare whether it is one hour or all day is £15 and overnight
-        boarding is £20. Very short notice can be accommodated.</p>
-    </section>
+  <!--=== CSS ===-->
+  <link rel="stylesheet" href="/css/master.css" type="text/css">
 
-  </body>
+  <title>Katie's Dog daycare</title>
+</head>
+
+<body>
+  <section class="main">
+    <h1>Katies Dog Daycare and Boarding</h1>
+    <p>Reliable and flexible home from home service looking after your dogs
+      while you work or go on holiday. I offer short term or long term stays,
+      ad hoc visits or anything else you require.</p>
+    <img src="assets/photo1.jpg" alt="Dog sleeping upside down" height="450" width="540">
+  </section>
+  <section class="about">
+    <p>I have looked after clients dogs for the last 10 years and I absolutely
+      love what I do and like to help clients as much as I can by making sure
+      I am available and flexible to their requirements and ensuring their dogs
+      are happy and well looked after and exercised.</p>
+    <p>The dogs love coming to me and when many owners tell their dogs they are
+      going to "Katie's the dogs sit and wait by the front door waiting for me!
+      Hence the name" Katies"!</p>
+    <p>I offer daycare so always have several dogs that travel and walk all
+      together as a pack, which the dogs love as lots of playmates and social
+      interaction and because they are well exercised together they all sleep
+      well too!</p>
+  </section>
+  <section class="hours">
+    <p>I am available 7 days a week 52 weeks of the year including Christmas
+      and Easter, etc!</p>
+    <p>I live in ripley and am happy to collect locally but also happy for
+      clients to drop their dogs off. <br>Daytime hours are from 6.15am to 9pm so
+      dogs can come and go anytime between then so that can accommodate most
+      peoples working hours!</p>
+  </section>
+  <section class="prices">
+    <p>Prices: daycare whether it is one hour or all day is £15 and overnight
+      boarding is £20. Very short notice can be accommodated.</p>
+  </section>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
